--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "'https://nestormamani.github.io/fox_lazyLoading'",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
